Add start and end icons and render them on map

--- a/Muddle.AspNetCore/resources/muddle/css/muddle.css
+++ b/Muddle.AspNetCore/resources/muddle/css/muddle.css
@@ -21,3 +21,9 @@ div.muddle-map-view {
     left: 0;
     z-index: 100;
 }
+.muddle-map-point-of-interest {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 5;
+}
