--- a/Muddle.Web/Pages/MapView.cshtml
+++ b/Muddle.Web/Pages/MapView.cshtml
@@ -13,6 +13,7 @@
     <render-map Map="@(new MapBuilder(10, 10)
                          .Named("Maze")
                          .AddStart(5, 5)
+                         .AddEnd(1, 1)
                          .AddPath(4, 5, Directions.East, 3)
                          .AddPath(6, 3, Directions.South, 4)
                          .AddPath(3, 3, Directions.East, 6)
@@ -25,6 +26,21 @@
                          .AddPath(5, 7, Directions.North, 2)
                          .AddPath(5, 6, Directions.West, 4)
                          .AddPath(3, 1, Directions.South, 5)
+                         .AddPath(7, 7, Directions.South, 3)
+                         .AddPath(7, 8, Directions.West, 4)
+                         .AddPath(7, 9, Directions.West, 8)
+                         .AddPath(4, 8, Directions.North, 2)
+                         .AddPath(3, 9, Directions.North, 2)
+                         .AddPath(3, 8, Directions.West, 3)
+                         .AddPath(0, 9, Directions.North, 2)
+                         .AddPath(1, 8, Directions.North, 4)
+                         .AddPath(1, 7, Directions.West, 2)
+                         .AddPath(0, 7, Directions.North, 4)
+                         .AddPath(2, 6, Directions.North, 4)
+                         .AddPath(0, 4, Directions.East, 2)
+                         .AddPath(1, 4, Directions.North, 4)
+                         .AddPath(6, 2, Directions.North, 3)
+                         .AddPath(6, 0, Directions.West, 6)
                          .Build())" show-coordinates="true"></render-map>
 
 </div>
