--- a/Muddle.Web/Views/Game/Index.cshtml
+++ b/Muddle.Web/Views/Game/Index.cshtml
@@ -18,7 +18,7 @@
 
 @if (player.IsAtEnd)
 {
-    <div class="alert alert-success">Congratulations, you have completed the map!</div>
+    <div class="alert alert-success">Congratulations, you have completed the map in @Model.Game.ActiveTimeSpan taking @Model.Game.Player.MovesMade moves!</div>
 }
 else
 {
