Add a map generator page to UI to visualise the difference in each algorithm

--- a/Muddle.Web/Pages/MapView.cshtml
+++ b/Muddle.Web/Pages/MapView.cshtml
@@ -3,6 +3,7 @@
 @using Muddle.Domain.Generators.DepthFirst
 @using Muddle.Domain.Generators.MazesForProgrammers
 @using System.Diagnostics
+@using Muddle.Domain.Generators
 @model MapViewModel
 @{
     ViewData["Title"] = "Map Viewer";
@@ -13,7 +14,7 @@
 
 @{
     var dfTimespan = Stopwatch.StartNew();
-    var dfGenerator = new MapGenerator(15, 10).Generate().Build();
+    var dfGenerator = new MapBuilderGenerator().Generate(Algorithms.DepthFirst,15, 10).Build();
     dfTimespan.Stop();
 }
 
@@ -21,17 +22,5 @@
 <div class="muddle-map-view">
 
     <render-map Map="@(dfGenerator)" show-coordinates="true"></render-map>
-
-</div>
-
-@{
-    var mfpTimespan = Stopwatch.StartNew();
-    var generator = new MfpMapGenerator().Generate(15, 10).Build();
-    mfpTimespan.Stop();
-}
-<h2>Aldous Broder Avoid Links (@mfpTimespan.ElapsedMilliseconds ms)</h2>
-<div class="muddle-map-view">
-
-    <render-map Map="@(generator)" show-coordinates="true"></render-map>
 
 </div>
