--- a/Muddle.Web/Views/Shared/_Layout.cshtml
+++ b/Muddle.Web/Views/Shared/_Layout.cshtml
@@ -36,9 +36,10 @@
                         <li class="nav-item">
                             <a class="nav-link" asp-area="" asp-page="/Map">Maps</a>
                         </li>
-                        @*<li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-page="/MapView">Map Viewer</a>
-                        </li>*@
+                        <li class="nav-item">
+                            <a class="nav-link" asp-area="" asp-page="/MapGenerator">Generators</a>
+                        </li>
+                        
                         <li class="nav-item">
                             <a class="nav-link" asp-area="" asp-page="/GamesMaster">Example Games</a>
                         </li>
